unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/fields/ffrrtemplate__c.field-meta.xml
<CustomField>
    <fullName>ffrrtemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actuals Template</label>
    <referenceTo>ffrr__Template__c</referenceTo>
    <relationshipLabel>Miscellaneous Adjustments</relationshipLabel>
    <relationshipName>MiscellaneousAdjustments</relationshipName>
    <type>Lookup</type>
</CustomField>