unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/fields/FFX_Rev_Rec_Sales_GLA__c.field-meta.xml
<CustomField>
    <fullName>FFX_Rev_Rec_Sales_GLA__c</fullName>
    <label>Rev Rec Sales GLA</label>
    <length>80</length>
    <type>Text</type>
</CustomField>