unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>