unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Contains the reason for the Misc Adjustments creation</description>
    <inlineHelpText>Field to select the reason for the Misc Adjustments creation.</inlineHelpText>
    <label>Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Decision</fullName>
            </value>
            <value>
                <fullName>Product Issue</fullName>
            </value>
            <value>
                <fullName>Services Issue</fullName>
            </value>
            <value>
                <fullName>Administrative Correction</fullName>
            </value>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>