unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Failed Sync</fullName>
            </value>
            <value>
                <fullName>Pending Invoice</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>