unpackaged/main/default/objects/pse__Miscellaneous_Adjustment__c/fields/SyncDate__c.field-meta.xml
<CustomField>
    <fullName>SyncDate__c</fullName>
    <label>SyncDate</label>
    <type>DateTime</type>
</CustomField>